[gd_scene format=3 uid="uid://be7fd6btqnbff"]

[ext_resource type="Texture2D" uid="uid://oqg3asfljco0" path="res://Assets/Magic_Mirror.png" id="1_3q64s"]
[ext_resource type="Script" uid="uid://csmm44qu8ahuf" path="res://Mirror/boss_mirror.gd" id="1_ptgi5"]
[ext_resource type="Texture2D" uid="uid://bordn5smv3au2" path="res://Assets/bubble.png" id="2_ptgi5"]
[ext_resource type="Texture2D" uid="uid://d373dvyoadpfu" path="res://Assets/Mirror_Boss.png" id="4_ptgi5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ptgi5"]
radius = 61.008198

[sub_resource type="AtlasTexture" id="AtlasTexture_adh0m"]
atlas = ExtResource("4_ptgi5")
region = Rect2(0, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iidsa"]
atlas = ExtResource("4_ptgi5")
region = Rect2(96, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_libo6"]
atlas = ExtResource("4_ptgi5")
region = Rect2(192, 0, 96, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_syxy2"]
atlas = ExtResource("4_ptgi5")
region = Rect2(288, 0, 96, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_104di"]
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adh0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iidsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_libo6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syxy2")
}],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[node name="BossMirror" type="Node2D" unique_id=2112466077]
script = ExtResource("1_ptgi5")

[node name="MagicMirror" type="Sprite2D" parent="." unique_id=1978475228]
texture = ExtResource("1_3q64s")

[node name="Control" type="Control" parent="." unique_id=1426659757]
unique_name_in_owner = true
visible = false
layout_direction = 3
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = -25.0
offset_right = 47.0
offset_bottom = -25.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Control" unique_id=1373124412]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control/MarginContainer" unique_id=1070057812]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_ptgi5")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer" unique_id=304914812]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer" unique_id=1230863438]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = -16
alignment = 2

[node name="Area2D" type="Area2D" parent="." unique_id=1220784679]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" unique_id=599076888]
position = Vector2(1, 100)
shape = SubResource("CircleShape2D_ptgi5")

[node name="sprite_add_timer" type="Timer" parent="." unique_id=1287171525]
unique_name_in_owner = true
wait_time = 0.2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=1592623267]
sprite_frames = SubResource("SpriteFrames_104di")
animation = &"new_animation"
autoplay = "new_animation"
frame_progress = 0.03305454

[connection signal="visibility_changed" from="Control" to="." method="_on_control_visibility_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="sprite_add_timer" to="." method="_on_sprite_add_timer_timeout"]
